--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   google_fonts: ^6.2.1
   shared_preferences: ^2.3.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
